--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Play ?</strong>
-    <p><a href="/image">TROUVER</a></p>
-  </div>
+<ion-content [fullscreen]="true" class="background">
+  <div class="title">GeoGuesseur</div>
 </ion-content>
+
+<ion-footer style="background: transparent; margin-bottom: 1em;">
+  <ion-button expand="block" shape="round" (click)="navigate('europe')">Commencer EUROPE + USA</ion-button>
+  <ion-button expand="block" shape="round" (click)="navigate('asie')">Commencer ASIE</ion-button>
+</ion-footer>
