--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,15 @@
 #container a {
   text-decoration: none;
 }
+
+.background{
+  --background: url(../../assets/images/homeBG.jpg) no-repeat center center / cover;
+}
+
+.title{
+  font-size: 3em;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 1em;
+  text-shadow: 1px 2px #333333;
+}
