--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,51 @@
-<ion-content [fullscreen]="true" class="background">
-  <div class="title">GeoGuesseur</div>
+<ion-content [fullscreen]="true">
+
+  <ion-slides pager="true" style="height: 100%;">
+    
+    <ion-slide class="background">
+      <div>
+        <div class="title">GeoGuesseur</div>
+        <ion-button expand="block" shape="round" (click)="navigate('Europe+and+North+America')">Europe and North America</ion-button>
+      </div>
+    </ion-slide>
+
+    <ion-slide class="background">
+      <div>
+        <div class="title">GeoGuesseur</div>
+        <ion-button expand="block" shape="round" (click)="navigate('Asia+and+the+Pacific')">Asia and the Pacific</ion-button>
+      </div>
+    </ion-slide>
+
+    <ion-slide class="background">
+      <div>
+        <div class="title">GeoGuesseur</div>
+        <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Latin America and the Caribbean</ion-button>
+      </div>
+    </ion-slide>
+
+    <ion-slide class="background">
+      <div>
+        <div class="title">GeoGuesseur</div>
+        <ion-button expand="block" shape="round" (click)="navigate('Africa')">Africa</ion-button>
+      </div>
+    </ion-slide>
+    
+    <ion-slide class="background">
+      <div>
+        <div class="title">GeoGuesseur</div>
+        <ion-button expand="block" shape="round" (click)="navigate('Arab+States')">Arab States</ion-button>
+      </div>
+    </ion-slide>
+
+  </ion-slides>
+
 </ion-content>
 
-<ion-footer style="background: transparent; margin-bottom: 1em;">
-  <ion-button expand="block" shape="round" (click)="navigate('europe')">Commencer EUROPE + USA</ion-button>
-  <ion-button expand="block" shape="round" (click)="navigate('asie')">Commencer ASIE</ion-button>
-</ion-footer>
+
+<!-- <ion-footer style="background: transparent; margin-bottom: 1em;">
+  <ion-button expand="block" shape="round" (click)="navigate('Europe+and+North+America')">Europe and North America</ion-button>
+  <ion-button expand="block" shape="round" (click)="navigate('Asia+and+the+Pacific')">Asia and the Pacific</ion-button>
+  <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Latin America and the Caribbean</ion-button>
+  <ion-button expand="block" shape="round" (click)="navigate('Africa')">Africa</ion-button>
+  <ion-button expand="block" shape="round" (click)="navigate('Arab+States')">Arab States</ion-button>
+</ion-footer> -->
