--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -27,7 +27,10 @@
 }
 
 .background{
-  --background: url(../../assets/images/homeBG.jpg) no-repeat center center / cover;
+  background-image: url(../../assets/images/homeBG.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto 100%;
 }
 
 .title{
