--- a/src/app/image/image.page.html
+++ b/src/app/image/image.page.html
@@ -8,14 +8,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  {{continent}}
-  <ion-card *ngIf="coordinates">
+  <!-- <ion-card *ngIf="coordinates">
     <ion-card-header>
       <ion-card-title> {{site}} </ion-card-title>
       <ion-card-subtitle> {{coordinates[0]}}, {{coordinates[1]}} </ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content> ID: {{id_number}} </ion-card-content>
+  </ion-card> -->
+
+  <ion-spinner *ngIf="!imageUrlTab[0]" style="display:block; margin: auto; height: 100%;"></ion-spinner>
+
+  <ion-card *ngFor="let imgUrl of imageUrlTab" mode="ios" style="max-width: 343px; max-height: 343px; margin-left: auto; margin-right: auto;">
+    <img src={{imgUrl}}/>
   </ion-card>
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
