responsive image grid, menu css modif

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,38 +2,38 @@
 
   <ion-slides pager="true" style="height: 100%;">
     
-    <ion-slide class="background">
+    <ion-slide class="euBG">
       <div>
         <div class="title">GeoGuesseur</div>
-        <ion-button expand="block" shape="round" (click)="navigate('Europe+and+North+America')">Europe and North America</ion-button>
+        <ion-button expand="block" shape="round" (click)="navigate('Europe+and+North+America')">Europe et Amérique du Nord</ion-button>
       </div>
     </ion-slide>
 
-    <ion-slide class="background">
+    <ion-slide class="asiaBG">
       <div>
         <div class="title">GeoGuesseur</div>
-        <ion-button expand="block" shape="round" (click)="navigate('Asia+and+the+Pacific')">Asia and the Pacific</ion-button>
+        <ion-button expand="block" shape="round" (click)="navigate('Asia+and+the+Pacific')">Asie-Pacifique</ion-button>
       </div>
     </ion-slide>
 
-    <ion-slide class="background">
+    <ion-slide class="southAmericaBG">
       <div>
         <div class="title">GeoGuesseur</div>
-        <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Latin America and the Caribbean</ion-button>
+        <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Amérique latine et Caraïbes</ion-button>
       </div>
     </ion-slide>
 
-    <ion-slide class="background">
+    <ion-slide class="africaBG">
       <div>
         <div class="title">GeoGuesseur</div>
-        <ion-button expand="block" shape="round" (click)="navigate('Africa')">Africa</ion-button>
+        <ion-button expand="block" shape="round" (click)="navigate('Africa')">Afrique</ion-button>
       </div>
     </ion-slide>
     
-    <ion-slide class="background">
+    <ion-slide class="arabicBG">
       <div>
         <div class="title">GeoGuesseur</div>
-        <ion-button expand="block" shape="round" (click)="navigate('Arab+States')">Arab States</ion-button>
+        <ion-button expand="block" shape="round" (click)="navigate('Arab+States')">Monde arabe</ion-button>
       </div>
     </ion-slide>
 
