--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
     </ion-slide>
 
     <ion-slide class="southAmericaBG">
-      <div>
+      <div style="margin: 1em;">
         <div class="title">GeoGuesseur</div>
         <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Amérique latine et Caraïbes</ion-button>
       </div>
@@ -40,12 +40,3 @@
   </ion-slides>
 
 </ion-content>
-
-
-<!-- <ion-footer style="background: transparent; margin-bottom: 1em;">
-  <ion-button expand="block" shape="round" (click)="navigate('Europe+and+North+America')">Europe and North America</ion-button>
-  <ion-button expand="block" shape="round" (click)="navigate('Asia+and+the+Pacific')">Asia and the Pacific</ion-button>
-  <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Latin America and the Caribbean</ion-button>
-  <ion-button expand="block" shape="round" (click)="navigate('Africa')">Africa</ion-button>
-  <ion-button expand="block" shape="round" (click)="navigate('Arab+States')">Arab States</ion-button>
-</ion-footer> -->
