--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
     </ion-slide>
 
     <ion-slide class="southAmericaBG">
-      <div style="margin: 1em;">
+      <div>
         <div class="title">GeoGuesseur</div>
         <ion-button expand="block" shape="round" (click)="navigate('Latin+America+and+the+Caribbean')">Amérique latine et Caraïbes</ion-button>
       </div>
