--- a/src/app/image/image.page.html
+++ b/src/app/image/image.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button name="exit"></ion-back-button>
+    <ion-buttons slot="end">
+      <ion-button slot="icon-only" (click)="presentAlert()"><ion-icon name="exit-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>Question {{turn}} sur 4</ion-title>
   </ion-toolbar>
