--- a/src/app/resultat/resultat.page.html
+++ b/src/app/resultat/resultat.page.html
@@ -6,6 +6,12 @@
         <ion-card-title>{{sommeKM}} km</ion-card-title>
       </ion-card-header>
     </ion-card>
+    <ion-card style="display:inline-block; text-align: center; border-radius: 10px;">
+      <ion-card-header>
+        <ion-card-subtitle>Meilleur score</ion-card-subtitle>
+        <ion-card-title>{{record}} km</ion-card-title>
+      </ion-card-header>
+    </ion-card>
   </div>
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
